fixed spacing for index

--- a/style.css
+++ b/style.css
@@ -7,14 +7,14 @@ body {
 
 /* Sidebar Styling */
 .sidebar {
-  height: 100vh;
-  width: 80px;
+  height: 109%;
+  width: 160%;
   background-color: #6B4C9A;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  padding: 20px 0;
+  padding: 40% 0;
 }
 
 .sidebar-item {
